# rc_drag_racing

./: .gitignore  README.md
include/: radio_registers.inc  wixel.inc
msp430/: Makefile  track_end.asm  track_start.asm
race_track/: CMakeLists.txt  Makefile  sdkconfig
race_track/main/: CMakeLists.txt  RaceTrack.cpp  RaceTrack.h  defines.h  main.cpp
race_track/tree/: Makefile  racing_tree.asm
schematics/: rc_drag_race_msp430_start.dia  rc_drag_race_wixel.dia
track_end/: Makefile  track_end.asm
track_start/: Makefile  track_start.asm
version_1/: Makefile  drag_race.asm  drag_race_end.asm
version_1/schematics/: drag_race.dia
version_2/: Makefile  track_end.asm  track_start.asm
version_2/include/: wixel.inc
version_3/schematics/: rc_drag_race_msp430_end.dia  rc_drag_race_msp430_start.dia
version_4/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
version_4/html/: index.html
version_4/main/: CMakeLists.txt  DragRace.cxx  DragRace.h  DragRaceEnd.cxx  DragRaceEnd.h  DragRaceStart.cxx  DragRaceStart.h  Network.cxx  Network.h  NetworkEnd.cxx  NetworkEnd.h  NetworkStart.cxx  NetworkStart.h  defines.h  drag_race_esp32.cxx
